add static file support + improve template

--- a/inst/project/templates/home.html
+++ b/inst/project/templates/home.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="static/style.css">
   <title>Ambiorix</title>
 </head>
 <body>
-  [% title %]
+  <h1>[% title %]</h1>
 </body>
 </html>
