--- a/inst/project/templates/404.html
+++ b/inst/project/templates/404.html
@@ -7,6 +7,6 @@
   <title>Not Found</title>
 </head>
 <body>
-  <h1>Sorry, there's nothing here :(</h1>
+  <h1 class="error">404: Not Found</h1>
 </body>
 </html>
