much, MUCH better templating closes #5

--- a/inst/project/templates/home.html
+++ b/inst/project/templates/home.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <h1 class="brand">[% title %]</h1>
+  <h2 class="brand">[% subtitle %]</h2>
   <button onclick="Ambiorix.send('hello', 'Hi from the client')">Send a message</button>
 </body>
 </html>
