--- a/inst/project/templates/home.html
+++ b/inst/project/templates/home.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/style.css">
-  <script src="static/ambiorix.js"></script>
+  [! header.html !]
   <script>
     var wss = new Ambiorix();
     wss.receive("hello", function(msg){
