--- a/inst/project/templates/404.html
+++ b/inst/project/templates/404.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/style.css">
+  [% partial 'header.html' %]
   <title>Not Found</title>
 </head>
 <body>
