fix template + change to random port

--- a/inst/project/templates/404.html
+++ b/inst/project/templates/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  [% partial 'header.html' %]
+  [! header.html !]
   <title>Not Found</title>
 </head>
 <body>
