pass route paths closes #26

--- a/inst/project/templates/home.html
+++ b/inst/project/templates/home.html
@@ -14,6 +14,6 @@
 <body>
   <h1 class="brand">[% title %]</h1>
   <h2 class="brand">[% subtitle %]</h2>
-  <button onclick="Ambiorix.send('hello', 'Hi from the client')">Send a message</button>
+  <button onclick='Ambiorix.send("hello", [{"speed":4,"dist":2},{"speed":4,"dist":10}])'>Send a message</button>
 </body>
 </html>
